apps/misc/listmonk/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk
  namespace: listmonk
spec:
  selector:
    app: listmonk
  ports:
    - name: http
      port: 9000
      targetPort: 9000
